src/test/deca/context/valid/created/decl_var/mult_decl.deca
// Description:
//  Multiple assign par ligne
// Resultats:
//      OK

{
    int x = 4, y = 6;
    println("4:", x);
    println("6: ", y);
}
