src/test/deca/context/invalid/created/affichage/print_BOOLEAN_2.deca
// Description:
//  Affiche boolean
// 
// Resultats:
//    Ligne 8 : Error expr should be Int, Float or String
{
   boolean x = true;
   println(x);
}
